# DionysusC

./: .gitignore  README.md  package-lock.json  package.json  qa_mobile.js  qa_report_20260615.md  report2_new_project_prompt.md  report3_tech_stack.tex  新约能天使-默认-基建-Move-x1.webm
backend/: dionysus_server.spec  electron_entry.py  pyproject.toml  requirements.txt  screenshot_qa.py
backend/config/: server.yaml
backend/config/personas/: exusiai.yaml
backend/config/themes/: dark_default.yaml  dark_glass.yaml  exusiai_default.yaml  paseo_dark.yaml
backend/dionysus_server/: __init__.py  __main__.py  config.py  main.py  models.py  paths.py  theme_manager.py
backend/dionysus_server/agent_adapters/: __init__.py  base.py  generic_cli.py  kimi_code_cli.py  registry.py  strategy.py
backend/dionysus_server/persona/: __init__.py  companion_engine.py  companion_scheduler.py  loader.py  supervisor.py  todo_tracker.py
backend/dionysus_server/session/: __init__.py  manager.py  models.py  store.py
backend/dionysus_server/websocket/: __init__.py  connection.py  handler.py
backend/elaw_server/: __init__.py  __main__.py  config.py  main.py  models.py  theme_manager.py
backend/elaw_server/agent_adapters/: __init__.py  base.py  generic_cli.py  kimi_code_cli.py  registry.py  strategy.py
backend/elaw_server/persona/: __init__.py  companion_engine.py  loader.py  todo_tracker.py
backend/tests/: conftest.py  test_adapter_registry.py  test_broadcast_callbacks.py  test_codebuddy_strategy.py  test_session_isolation.py  test_session_store.py  test_supervisor.py
electron/: main.cjs  (+2 more)
(+131 files in other folders)
